implemented crud actions

--- a/FrontAngularTest/src/app/posts-list/posts-list.component.html
+++ b/FrontAngularTest/src/app/posts-list/posts-list.component.html
@@ -6,5 +6,5 @@
       <app-post [post]="post"></app-post>
     </li>
   </ul>
-  <button class="blog__create-button" (click)="onCreate()">Добавить</button>
+  <button class="blog__create-button" routerLink="./new">Добавить</button>
 </main>
