added material modal dialog

--- a/FrontAngularTest/src/app/post/post.component.html
+++ b/FrontAngularTest/src/app/post/post.component.html
@@ -5,5 +5,5 @@
   <div class="post__content">
     {{content}}
   </div>
-  <button class="post__button" routerLink="./{{post.id}}" (click)="onDetails">Перейти</button>
+  <button class="post__button" routerLink="./{{post.id}}">Перейти</button>
 </div>
