--- a/FrontAngularTest/src/app/post-details/post-details.component.html
+++ b/FrontAngularTest/src/app/post-details/post-details.component.html
@@ -1,22 +1,20 @@
 <div>
-  <div>
-    <form class="post-form" action="" method="post">
-      <a routerLink="../">Back</a>
-      <label class="post-form__label" for="post-title">
-        <h2>Запись {{post.title}}</h2>
-      </label>
-      <div class="post-form__block">
-        <input [(ngModel)]="post.title" class="post-form__title-input" type="text" placeholder="title" name="post-title"
-          id="post-title">
-      </div>
-      <div class="post-form__block">
-        <input [(ngModel)]="post.content" class="post-form__content-input" type="text" placeholder="content"
-          name="post-content" id="post-content">
-      </div>
-      <div class="post-form__block">
-        <button class="post-form__delete-button" (click)="onDelete()" type="button">Удалить</button>
-        <button class="post-form__submit-button" (click)="onSubmit()" type="button">Сохранить</button>
-      </div>
-    </form>
-  </div>
+  <form class="post-form" action="" method="post">
+    <button class="button" routerLink="../">Back</button>
+    <label class="post-form__label" for="post-title">
+      <h2>Запись {{post.title}}</h2>
+    </label>
+    <div class="post-form__block">
+      <input [(ngModel)]="post.title" class="post-form__title-input" type="text" placeholder="Заголовок"
+        name="post-title" id="post-title">
+    </div>
+    <div class="post-form__block">
+      <input [(ngModel)]="post.content" class="post-form__content-input" type="text" placeholder="Содержимое"
+        name="post-content" id="post-content">
+    </div>
+    <div class="post-form__block">
+      <button class="button post-form__delete-button" (click)="onDelete()" type="button">Удалить</button>
+      <button class="button post-form__submit-button" (click)="onSubmit()" type="button">Сохранить</button>
+    </div>
+  </form>
 </div>
