--- a/FrontAngularTest/src/app/post-details/post-details.component.scss
+++ b/FrontAngularTest/src/app/post-details/post-details.component.scss
@@ -1,11 +1,15 @@
 .post-form {
-  max-width: 60%;
+  max-width: 40%;
   margin: 0 auto;
+  overflow: hidden;
+  padding: 10px;
   &__label {
+    width: 100%;
+    height: 20px;
+    overflow-y: hidden;
   }
   &__title-input {
     box-sizing: border-box;
-    border: 1px solid blue;
     width: 100%;
     margin-bottom: 2rem;
     padding: 10px;
@@ -13,7 +17,6 @@
   &__content-input {
     box-sizing: border-box;
     width: 100%;
-    border: 1px solid green;
     height: 400px;
     padding: 10px;
     margin-bottom: 1.5rem;
@@ -23,7 +26,9 @@
     justify-content: space-between;
   }
   &__delete-button {
+    background-color: red;
   }
   &__submit-button {
+    background-color: blue;
   }
 }
