--- a/FrontAngularTest/src/styles.scss
+++ b/FrontAngularTest/src/styles.scss
@@ -1,3 +1,44 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '~@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$FrontAngularTest-primary: mat.define-palette(mat.$indigo-palette);
+$FrontAngularTest-accent: mat.define-palette(
+  mat.$pink-palette,
+  A200,
+  A100,
+  A400
+);
+
+// The warn palette is optional (defaults to red).
+$FrontAngularTest-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$FrontAngularTest-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $FrontAngularTest-primary,
+      accent: $FrontAngularTest-accent,
+      warn: $FrontAngularTest-warn,
+    ),
+  )
+);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($FrontAngularTest-theme);
+
 /* You can add global styles to this file, and also import other style files */
 ul,
 li {
@@ -7,4 +48,25 @@ li {
 
 li {
   list-style: none;
+}
+.button {
+  width: 100px;
+  height: 2rem;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+.modal-backdrop {
+  background-color: rgba(0, 0, 0, 0.9);
+}
+.modal-panel > .mat-dialog-container {
+  padding: 0;
+  border-radius: 0;
+  box-shadow: none;
 }
