created/applied button styles, removed unused code

--- a/FrontAngularTest/src/app/modal/modal.component.html
+++ b/FrontAngularTest/src/app/modal/modal.component.html
@@ -3,7 +3,7 @@
     Вы действительно хотите удалить пост{{data.title ? " \"" + data.title +"\"" : null}}?
   </div>
   <div class="modal__buttons">
-    <button class="button" (click)="onClose(false)">Отменить</button>
-    <button class="button" (click)="onClose(true)">Удалить</button>
+    <button class="button button_primary" (click)="onClose(false)">Отменить</button>
+    <button class="button button_primary" (click)="onClose(true)">Удалить</button>
   </div>
 </div>
