--- a/FrontAngularTest/src/app/post/post.component.html
+++ b/FrontAngularTest/src/app/post/post.component.html
@@ -1,9 +1,7 @@
 <div class="post">
-  <div class="post__title">
-    {{title}}
-  </div>
+  <h2>{{title}}</h2>
   <div class="post__content">
     {{content}}
   </div>
-  <button class="post__button" routerLink="./{{post.id}}">Перейти</button>
+  <button class="button button_primary post__button" routerLink="./{{post.id}}">Перейти</button>
 </div>
