--- a/FrontAngularTest/src/styles.scss
+++ b/FrontAngularTest/src/styles.scss
@@ -1,13 +1,13 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '~@angular/material' as mat;
+@use "sass:color";
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
 @include mat.core();
-
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
@@ -40,6 +40,17 @@ $FrontAngularTest-theme: mat.define-light-theme(
 @include mat.all-component-themes($FrontAngularTest-theme);
 
 /* You can add global styles to this file, and also import other style files */
+
+// ngMaterial styles
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+// ----------
 ul,
 li {
   margin: 0;
@@ -49,18 +60,56 @@ li {
 li {
   list-style: none;
 }
-.button {
-  width: 100px;
-  height: 2rem;
+h1 {
+  font-size: 2rem;
+}
+h2 {
+  cursor: default;
+  white-space: nowrap;
+  overflow: hidden;
+  font-size: 1rem;
+  margin-bottom: 0;
 }
 
-html,
-body {
-  height: 100%;
+$primary: hsl(217, 76%, 92%);
+$primary-border: color.adjust($primary, $lightness: -16%);
+$secondary: color.adjust($primary, $hue: 120);
+$secondary-border: color.adjust($secondary, $lightness: -16%);
+
+.button {
+  box-sizing: border-box;
+  width: 100px;
+  height: 2rem;
+  // adjust-color();
+  border-radius: 0.25rem;
+  &:hover {
+    cursor: pointer;
+  }
 }
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+
+.button_primary {
+  background-color: $primary;
+  border: 1px solid $primary-border;
+  &:hover {
+    border: 1px solid color.adjust($primary-border, $lightness: 5%);
+    background-color: color.adjust($primary, $lightness: 5%);
+  }
+  &:active {
+    border: 1px solid color.adjust($primary-border, $lightness: -12%);
+    background-color: color.adjust($primary, $lightness: -12%);
+  }
+}
+.button_secondary {
+  background-color: $secondary;
+  border: 1px solid $secondary-border;
+  &:hover {
+    border: 1px solid color.adjust($secondary-border, $lightness: 5%);
+    background-color: color.adjust($secondary, $lightness: 5%);
+  }
+  &:active {
+    border: 1px solid color.adjust($secondary-border, $lightness: -12%);
+    background-color: color.adjust($secondary, $lightness: -12%);
+  }
 }
 .modal-backdrop {
   background-color: rgba(0, 0, 0, 0.9);
