--- a/FrontAngularTest/src/app/post-details/post-details.component.scss
+++ b/FrontAngularTest/src/app/post-details/post-details.component.scss
@@ -1,5 +1,7 @@
 .post-form {
-  max-width: 40%;
+  width: 80%;
+  max-width: 700px;
+
   margin: 0 auto;
   overflow: hidden;
   padding: 10px;
@@ -13,22 +15,17 @@
     width: 100%;
     margin-bottom: 2rem;
     padding: 10px;
+    max-height: 40px;
   }
   &__content-input {
     box-sizing: border-box;
     width: 100%;
-    height: 400px;
+    height: 300px;
     padding: 10px;
     margin-bottom: 1.5rem;
   }
   &__block {
     display: flex;
     justify-content: space-between;
-  }
-  &__delete-button {
-    background-color: red;
-  }
-  &__submit-button {
-    background-color: blue;
   }
 }
