--- a/FrontAngularTest/src/app/posts-list/posts-list.component.scss
+++ b/FrontAngularTest/src/app/posts-list/posts-list.component.scss
@@ -1,25 +1,34 @@
 .blog {
   position: relative;
-  max-width: 60%;
+  width: 80%;
+  max-width: 800px;
   margin: 0 auto;
   &__posts {
-    @media screen and (max-width: 1280px) {
+    display: grid;
+    gap: 25px;
+    width: 100%;
+    justify-items: center;
+    grid-template-columns: repeat(1, 1fr);
+    @media screen and (min-width: 530px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media screen and (min-width: 800px) {
       grid-template-columns: repeat(3, 1fr);
     }
-    @media screen and (max-width: 640px) {
-      grid-template-columns: repeat(2, 1fr);
-      width: 100%;
+    @media screen and (min-width: 1100px) {
+      grid-template-columns: repeat(4, 1fr);
     }
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 25px;
   }
   &__title {
     text-align: center;
   }
   &__create-button {
-    position: absolute;
-    right: 0px;
-    bottom: 0px;
+    position: fixed;
+    bottom: 20%;
+    z-index: 1000;
+    right: 20px;
+    @media screen and (min-width: 1200px) {
+      right: 20%;
+    }
   }
 }
