--- a/FrontAngularTest/src/app/post-details/post-details.component.scss
+++ b/FrontAngularTest/src/app/post-details/post-details.component.scss
@@ -1,30 +1,28 @@
 .post-form {
+  margin: 0 auto;
+  margin-top: 3rem;
+  padding: 0.625rem;
   width: 80%;
   max-width: 700px;
-
-  margin: 0 auto;
-  overflow: hidden;
-  padding: 10px;
   &__label {
     width: 100%;
-    height: 20px;
     overflow-y: hidden;
   }
   &__title-input {
     box-sizing: border-box;
-    width: 100%;
     margin-bottom: 2rem;
     padding: 10px;
+    width: 100%;
     max-height: 40px;
   }
   &__content-input {
     box-sizing: border-box;
+    margin-bottom: 1.5rem;
+    padding: 10px;
     width: 100%;
     height: 300px;
-    padding: 10px;
-    margin-bottom: 1.5rem;
   }
-  &__block {
+  &__buttons {
     display: flex;
     justify-content: space-between;
   }
