--- a/FrontAngularTest/src/styles.scss
+++ b/FrontAngularTest/src/styles.scss
@@ -50,7 +50,7 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-// ----------
+// --------------------
 ul,
 li {
   margin: 0;
@@ -65,8 +65,8 @@ h1 {
 }
 h2 {
   cursor: default;
-  white-space: nowrap;
   overflow: hidden;
+  white-space: nowrap;
   font-size: 1rem;
   margin-bottom: 0;
 }
