fixed button label

--- a/FrontAngularTest/src/app/post-details/post-details.component.html
+++ b/FrontAngularTest/src/app/post-details/post-details.component.html
@@ -1,5 +1,5 @@
 <form class="post-form" action="" method="post" (ngSubmit)="onSubmit()">
-  <button class="button button_primary" routerLink="../">Back</button>
+  <button class="button button_primary" routerLink="../">Назад</button>
   <label class="post-form__label" for="post-title">
     <h2>Запись {{post.title}}</h2>
   </label>
